# flappy-brain

./: Cargo.toml
backend/: Cargo.toml
backend/src/: bird.rs  body.rs  game.rs  lib.rs  pipe.rs
frontend/: Cargo.toml
frontend/src/: interface.rs  main.rs
neural_network/: Cargo.toml
neural_network/data/: bias_layer1  bias_layer2  weights_layer1  weights_layer2
neural_network/src/: layer.rs  main.rs  network.rs
