[package]
name = "neural_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version="0.33.0", features = ["rand"]}
rand = "0.8.5"
serde = "1.0.204"
serde_json = "1.0.121"
backend = {path = "../backend"}
frontend = {path = "../frontend"}
ratatui = "0.27.0"
